# serializer version: 1
# name: test_get_documents[False-0]
  '''
  <?xml version="1.0" ?>
  <doc xmlns:ns1="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0039/2">
  	<ns1:uuid>00000000-0000-0000-0000-000000000000</ns1:uuid>
  	<ns1:titles>
  		<ns2:title>dummy</ns2:title>
  	</ns1:titles>
  	<ns1:status>signed</ns1:status>
  	<ns1:files>
  		<ns1:file>
  			<ns1:pathFileName>unknown</ns1:pathFileName>
  			<ns1:mimeType>unknown</ns1:mimeType>
  		</ns1:file>
  	</ns1:files>
  </doc>
  
  '''
# ---
# name: test_get_documents[False-1]
  '''
  <?xml version="1.0" ?>
  <doc xmlns:ns1="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0039/2">
  	<ns1:uuid>7604864d-fada-4431-b63b-fc9f4915233d</ns1:uuid>
  	<ns1:titles>
  		<ns2:title>foo</ns2:title>
  	</ns1:titles>
  	<ns1:status>signed</ns1:status>
  	<ns1:files>
  		<ns1:file>
  			<ns1:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns1:pathFileName>
  			<ns1:mimeType>application/pdf</ns1:mimeType>
  		</ns1:file>
  	</ns1:files>
  	<ns1:documentKind/>
  </doc>
  
  '''
# ---
# name: test_get_documents[False-2]
  '''
  <?xml version="1.0" ?>
  <doc xmlns:ns1="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0039/2">
  	<ns1:uuid>23daf554-c2f5-4aa2-b5f2-734a96ed84d8</ns1:uuid>
  	<ns1:titles>
  		<ns2:title>foo</ns2:title>
  	</ns1:titles>
  	<ns1:status>signed</ns1:status>
  	<ns1:files>
  		<ns1:file>
  			<ns1:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns1:pathFileName>
  			<ns1:mimeType>application/pdf</ns1:mimeType>
  		</ns1:file>
  	</ns1:files>
  	<ns1:documentKind/>
  </doc>
  
  '''
# ---
# name: test_get_documents[False-2].1
  '''
  <?xml version="1.0" ?>
  <doc xmlns:ns1="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0039/2">
  	<ns1:uuid>7604864d-fada-4431-b63b-fc9f4915233d</ns1:uuid>
  	<ns1:titles>
  		<ns2:title>foo</ns2:title>
  	</ns1:titles>
  	<ns1:status>signed</ns1:status>
  	<ns1:files>
  		<ns1:file>
  			<ns1:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns1:pathFileName>
  			<ns1:mimeType>application/pdf</ns1:mimeType>
  		</ns1:file>
  	</ns1:files>
  	<ns1:documentKind/>
  </doc>
  
  '''
# ---
# name: test_get_documents[True-0]
  '''
  <?xml version="1.0" ?>
  <doc xmlns:ns1="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0039/2">
  	<ns1:uuid>00000000-0000-0000-0000-000000000000</ns1:uuid>
  	<ns1:titles>
  		<ns2:title>dummy</ns2:title>
  	</ns1:titles>
  	<ns1:status>signed</ns1:status>
  	<ns1:files>
  		<ns1:file>
  			<ns1:pathFileName>unknown</ns1:pathFileName>
  			<ns1:mimeType>unknown</ns1:mimeType>
  		</ns1:file>
  	</ns1:files>
  </doc>
  
  '''
# ---
# name: test_get_documents[True-1]
  '''
  <?xml version="1.0" ?>
  <doc xmlns:ns1="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0039/2">
  	<ns1:uuid>7604864d-fada-4431-b63b-fc9f4915233d</ns1:uuid>
  	<ns1:titles>
  		<ns2:title>baz</ns2:title>
  	</ns1:titles>
  	<ns1:status>signed</ns1:status>
  	<ns1:files>
  		<ns1:file>
  			<ns1:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns1:pathFileName>
  			<ns1:mimeType>application/pdf</ns1:mimeType>
  		</ns1:file>
  	</ns1:files>
  	<ns1:documentKind/>
  </doc>
  
  '''
# ---
# name: test_get_documents[True-2]
  '''
  <?xml version="1.0" ?>
  <doc xmlns:ns1="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0039/2">
  	<ns1:uuid>23daf554-c2f5-4aa2-b5f2-734a96ed84d8</ns1:uuid>
  	<ns1:titles>
  		<ns2:title>baz</ns2:title>
  	</ns1:titles>
  	<ns1:status>signed</ns1:status>
  	<ns1:files>
  		<ns1:file>
  			<ns1:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns1:pathFileName>
  			<ns1:mimeType>application/pdf</ns1:mimeType>
  		</ns1:file>
  	</ns1:files>
  	<ns1:documentKind/>
  </doc>
  
  '''
# ---
# name: test_get_documents[True-2].1
  '''
  <?xml version="1.0" ?>
  <doc xmlns:ns1="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0039/2">
  	<ns1:uuid>7604864d-fada-4431-b63b-fc9f4915233d</ns1:uuid>
  	<ns1:titles>
  		<ns2:title>baz</ns2:title>
  	</ns1:titles>
  	<ns1:status>signed</ns1:status>
  	<ns1:files>
  		<ns1:file>
  			<ns1:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns1:pathFileName>
  			<ns1:mimeType>application/pdf</ns1:mimeType>
  		</ns1:file>
  	</ns1:files>
  	<ns1:documentKind/>
  </doc>
  
  '''
# ---
# name: test_office
  '''
  <?xml version="1.0" ?>
  <office xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0097/2" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0007/6">
  	<ns1:entryOfficeIdentification>
  		<ns2:uid>
  			<ns2:uidOrganisationIdCategorie>CHE</ns2:uidOrganisationIdCategorie>
  			<ns2:uidOrganisationId>123123123</ns2:uidOrganisationId>
  		</ns2:uid>
  		<ns2:localOrganisationId>
  			<ns2:organisationIdCategory>ebaube</ns2:organisationIdCategory>
  			<ns2:organisationId><!-- ORGANISATION_ID --></ns2:organisationId>
  		</ns2:localOrganisationId>
  		<ns2:organisationName>Leitbehörde Burgdorf</ns2:organisationName>
  		<ns2:legalForm>0223</ns2:legalForm>
  	</ns1:entryOfficeIdentification>
  	<ns1:municipality>
  		<ns3:municipalityName>Burgdorf</ns3:municipalityName>
  		<ns3:cantonAbbreviation>BE</ns3:cantonAbbreviation>
  	</ns1:municipality>
  </office>
  
  '''
# ---
